--- a/style.css
+++ b/style.css
@@ -8,7 +8,7 @@ font-family: 'Roboto Slab', serif; */
 */
 
 body {
-    background: #e0210b;
+    background: white;
     color: #414141;
     font-family: 'Roboto' , sans-serif;
     font-size: 16px;
