--- a/style.css
+++ b/style.css
@@ -271,7 +271,7 @@ section{
     width: 80px;
     height: 3px;
     margin: 20px auto 0;
-    background:#F05F40;
+    background: white;
 }
 
 .service-items .icon{
