--- a/style.css
+++ b/style.css
@@ -442,7 +442,7 @@ footer a:hover{
 }
 
 .slide_viewer {
-  height: 340px;
+  height: 700px;
   overflow: hidden;
   position: relative;
 }
@@ -465,19 +465,19 @@ footer a:hover{
 }
 
 .slide:nth-of-type(1) {
-  background: #D7A151;
+  background: transparent;
 }
 
 .slide:nth-of-type(2) {
-  background: #F4E4CD;
+  background: transparent;
 }
 
 .slide:nth-of-type(3) {
-  background: #C75534;
+  background: transparent;
 }
 
 .slide:nth-of-type(4) {
-  background: #D1D1D4;
+  background: transparent;
 }
 
 .slide_buttons {
@@ -499,7 +499,7 @@ a.slide_btn {
 }
 
 .slide_btn.active, .slide_btn:hover {
-  color: #428CC6;
+  color: grey;
   cursor: pointer;
 }
 
@@ -541,6 +541,12 @@ a.slide_btn {
 
 .previous_btn:hover, .next_btn:hover {
   opacity: 1;
+}
+
+img {
+  aspect-ratio: 3/4;
+  width: 50%;
+
 }
 
 @media only screen and (max-width: 767px) {
