--- a/style.css
+++ b/style.css
@@ -303,13 +303,14 @@ section{
     color: #ad635f;
 }
 
-.service-items p{
-    font-size: 16px;
-    line-height: 1.6;
-    color: #414141;
-    margin-bottom: 15px;
-}
-
+.service-items {
+    display: flex-grid;
+    width: 275px;
+    margin-left: 50%;
+    margin-right: 50%;
+    padding: 25px;
+    
+  }
 /**** SERVICE END ****/
 /**** PORTFOLIO ****/
 
